--- a/bonfire.html
+++ b/bonfire.html
@@ -93,7 +93,7 @@
   <section class="pt-5 mt-3">
     <div class="container center pb-4 mt-5">
       <div class="pb-2">
-        <h2 style="font-size: 20px; font-weight: 600">Bonfire, a Euna Solutions Brand (eProcurement)</h2>
+        <h2 style="font-size: 20px; font-weight: 600">Bonfire, a Euna Solutions Brand (Procurement Software)</h2>
       </div>
       <div>
         <p>Bonfire is one of the multiple product lines I provided Graphic Design support for under Euna Solutions—this project highlights my contributions to Bonfire specifically. Every year, Bonfire releases a State of Public Sourcing Report (SOPS). The 2023 report is backed by comprehensive data from almost 600 U.S. public agencies that use Bonfire.</p>
@@ -147,13 +147,13 @@
   <section class="mx-auto pb-5 mb-5 bg-lt-blue">
 
     <div class="col-lg-8 mx-auto pt-4">
-      <video muted class="vimeo-lg" style="width: 640px; height: 360px" controls loop autoplay>
+      <video muted class="vimeo-lg" style="width: 640px; height: 360px"loop autoplay>
                 <source src="img/euna/sops-lp.mp4" type="video/mp4">
               </video>
-      <video muted class="vimeo-md" style="width: 540px; height: 260px" controls loop autoplay>
+      <video muted class="vimeo-md" style="width: 540px; height: 260px"loop autoplay>
                 <source src="img/euna/sops-lp.mp4" type="video/mp4">
               </video>
-      <video muted class="vimeo-sm" style="width: 275px; height: 160px" controls loop autoplay>
+      <video muted class="vimeo-sm" style="width: 275px; height: 160px"loop autoplay>
                 <source src="img/euna/sops-lp.mp4" type="video/mp4">
               </video>
 
@@ -180,12 +180,14 @@
 
   <section class="pb-5 pt-4">
       <ul class="scope-list center">
-        <li>Illustration</li>
         <li>UXR</li>
         <li>Campaign Creative</li>
+        <li>Report Design</li>
+        <li>Events Assets</li>
         <li>Data Visuals</li>
-        <li>Type Layout</li>
-        <li>LP Design</li>
+        <li>Illustration</li>
+        <li>Typesetting</li>
+        <li>Custom Landing Page</li>
       </ul>
   </section>
 
@@ -196,14 +198,14 @@
           <div class="pb-4">
             <a href="euna.html"><img class="img-fluid project" src="img/euna-2.png"></a>
           </div>
-          <p class="project-sub">Design. Marketing. Brand.</p>
+          <p class="project-sub">Design. Creative. Brand.</p>
           <h5 class="project-title">Euna Solutions</h5>
         </div>
         <div class="col-sm-6 col-md-6 col-lg-6 pb-2">
           <div class="pb-4">
             <a href="nng.html"><img class="img-fluid project" src="img/nng-1.png"></a>
           </div>
-          <p class="project-sub">Book Cover. Visual System. Design.</p>
+          <p class="project-sub">Visual System. Design Thinking.</p>
           <h5 class="project-title">Nielsen Norman Group</h5>
         </div>
       </div>
