--- a/canopy.html
+++ b/canopy.html
@@ -158,7 +158,7 @@
           <div class="pb-4">
             <a href="hhi.html"><img class="img-fluid project hhi-border" src="img/hhi-1.png"></a>
           </div>
-          <p class="project-sub">Illustration. Branding. Passion Project.</p>
+          <p class="project-sub">Artwork. Brand. Passion Project.</p>
           <h5 class="project-title">Half Halt Illustrations</h5>
         </div>
       </div>
