--- a/csp.html
+++ b/csp.html
@@ -107,9 +107,9 @@
         <h2 style="font-size: 20px; font-weight: 600">Canadian Science Publishing (Not-for-Profit)</h2>
       </div>
       <div>
-        <p>Canadian Science Publishing is an Ottawa-based not-for-profit scholarly publisher that provides access to their suite of scientific journals through paid and open access subscriptions.</p>
-        <p>After Canadian Science Publishing (CSP) rebranded, they needed a design solution to promote their new identity to current and potential institutions. In addition, CSP needed a reliable system to gather data and measure performance. The goal of this project was to research and implement a design solution that enabled marketing to promote CSP’s brand identity, track campaign performance and use that data to inform future sales and marketing decisions.</p>
-        <p style="font-weight: 600;">My key contributions to CSP:</p>
+        <p>Canadian Science Publishing (CSP) is an Ottawa-based not-for-profit scholarly publisher that provides access to their suite of scientific journals through paid and open access subscriptions.</p>
+        <p>After CSP rebranded, they needed a design solution to promote their new identity to current and potential institutions. In addition, they needed a reliable system to gather data and measure performance. The goal of this project was to research and implement a design solution that enabled marketing to promote CSP’s brand identity, track campaign performance and use that data to inform future sales and marketing decisions.</p>
+        <p style="font-weight: 600;">My key contributions to Canadian Science Publishing:</p>
         <ul>
           <li class="pb-3"><span class="font-weight-bold">Implemented a design process.</span> This helped the team establish structure.</li>
           <li class="pb-3"><span class="font-weight-bold">Established a design system.</span> This helped Operations and Sales understand how and why the team chooses to implement certain components over others.</li>
@@ -226,12 +226,11 @@
   </div>
 </section>
 
-  <section class="pt-5 pb-3">
+  <section class="pt-5">
     <div class="container center">
       <div class="pb-5">
         <h2 style="font-size: 20px; font-weight: 600">Results and Takeaways</h2>
         <p>Since the implementation of the Hubspot landing page and catalogue Flipbook, there was a significant increase of traffic and engagement in marketing and sales campaigns. Because marketing was able to support sales using the collected data, there was also an increase in subscriptions from librarians and agents sourced from sales-specific campaigns. Furthermore, the digital flipbook received a lot of positive feedback from users.</p>
-        <p style="font-weight: 600;">Some key takeaways from this project:</p>
         <ul>
           <li class="pb-3"><span class="font-weight-bold">Create a strategic plan. </span> This helps deal with out-of-scope requests that could potentially derail the project and helps deliver a quality product in time.</li>
           <li class="pb-3"><span class="font-weight-bold">User testing doesn't end after development.</span> Design is a constant iteration of improving the experience for the end user. Always find ways to collect and listen to user feedback.</li>
@@ -247,13 +246,14 @@
 
   <section class="pb-4">
       <ul class="scope-list center">
-        <li>UX</li>
+        <li>Communication</li>
+        <li>User Research</li>
+        <li>User Experience</li>
         <li>Whiteboarding</li>
         <li>Wireframing</li>
         <li>Prototyping</li>
-        <li>User Research</li>
         <li>Illustration</li>
-        <li>Frontend Design</li>
+        <li>Frontend</li>
       </ul>
   </section>
 
@@ -264,7 +264,7 @@
           <div class="pb-4">
             <a href="nng.html"><img class="img-fluid project" src="img/nng-1.png"></a>
           </div>
-          <p class="project-sub">Book Cover. Visual System. Design.</p>
+          <p class="project-sub">Visual System. Design Thinking.</p>
           <h5 class="project-title">Nielsen Norman Group</h5>
         </div>
         <div class="col-sm-6 col-md-6 col-lg-6 pb-2">
