--- a/index.html
+++ b/index.html
@@ -132,14 +132,14 @@
         <a class="d-block mx-auto mb-4" href="euna.html">
         <img class="img-fluid project" src="img/euna-2.png">
       </a>
-        <p class="project-sub">Design. Marketing. Brand.</p>
+        <p class="project-sub">Design. Creative. Brand.</p>
         <h5 class="project-title">Euna Solutions</h5>
       </div>
       <div class="col-sm-6">
         <a class="d-block mx-auto mb-4" href="bonfire.html">
         <img class="img-fluid project" src="img/bonfire-1.png">
       </a>
-        <p class="project-sub">Campaign. Design. Marketing.</p>
+        <p class="project-sub">Campaign Creative. Design. Data Visuals.</p>
         <h5 class="project-title">Bonfire Interactive</h5>
       </div>
       <div class="w-100"></div>
@@ -147,14 +147,14 @@
         <a class="d-block mx-auto mb-4" href="questica.html">
       <img class="img-fluid project" src="img/questica-1.png">
     </a>
-        <p class="project-sub">Campaign. Design. Postcards.</p>
+        <p class="project-sub">Campaign Creative. Design. Illustration.</p>
         <h5 class="project-title">Questica Budget</h5>
       </div>
       <div class="col-sm-6">
         <a class="d-block mx-auto mb-4" href="nng.html">
         <img class="img-fluid project" src="img/nng-1.png">
       </a>
-        <p class="project-sub">Book Cover. Visual System. Design.</p>
+        <p class="project-sub">Visual System. Design Thinking.</p>
         <h5 class="project-title">Nielsen Norman Group</h5>
       </div>
     </div>
@@ -194,7 +194,7 @@
         <a class="d-block mx-auto mb-4" href="hhi.html">
           <img class="img-fluid project hhi-border" src="img/hhi-1.png">
         </a>
-        <p class="project-sub">Illustration. Branding. Passion Project.</p>
+        <p class="project-sub">Artwork. Brand. Passion Project.</p>
         <h5 class="project-title">Half Halt Illustrations</h5>
       </div>
       <div class="col-sm-6">
