--- a/masterpiece-vr.html
+++ b/masterpiece-vr.html
@@ -202,19 +202,18 @@
 
   <section class="pt-5 pb-3">
     <div class="container center">
-      <div class="pb-5">
+      <div class="pb-2">
         <h2 style="font-size: 20px; font-weight: 600">Results and Takeaways</h2>
-        <p>We presented our final working prototype and ran a live demo to students and professors. We had a lot of great feedback and carried this forward with a final project report. I created some whiteboard illustrations to support the brand and visual
-          display of our live demo.</p>
-        <div class="text-center pt-3 pb-5">
-          <img class="img-fluid" src="img/mpvr/wbs-sm.jpg" alt="">
-        </div>
-        <p>Some key takeaways from this project:</p>
+        <p>We presented our final working prototype and ran a live demo to students and professors. We had a lot of great feedback and carried this forward with a final project report.</p>
         <ul>
           <li class="pb-3"><span class="font-weight-bold">Using a design sprint is powerful. </span> Kicking off our project with this method helped our team focus on the problem and innovate to solve it.</li>
           <li class="pb-3"><span class="font-weight-bold">Scrum goes a long way.</span> Our team struggled with communication and working cohesively. Introducing a daily 15 minute scrum meeting made a world of difference.</li>
           <li class="pb-3"><span class="font-weight-bold">Testing doesn't end after development.</span> Design is a constant iteration of improving the experience for the end user. Always find ways to collect and listen to your user feedback.</li>
         </ul>
+        <div class="text-center pt-3 pb-3">
+          <img class="img-fluid" src="img/mpvr/wbs-sm.jpg" alt="">
+        <p class="caption pt-2">Whiteboard artwork I created to support the brand and visual display of our live demo.</p>
+        </div>
       </div>
     </div>
   </section>
