--- a/nng.html
+++ b/nng.html
@@ -112,13 +112,11 @@
 
   <section class="pt-5 mt-3">
     <div class="container center pb-4 mt-5">
-      <div class="pb-2">
-        <h2 style="font-size: 20px; font-weight: 600">Neilsen Norman Group</h2>
-      </div>
       <div>
+        <h2 style="font-size: 20px; font-weight: 600">Neilsen Norman Group</h2>
         <p>Book Cover Design + Visual System (Design Thinking Process)</p>
         <div class="bb"></div>
-        <div class="mt-5">
+        <div class="mt-4">
           <h3 style="font-size: 18px; font-weight: 600">Objectives</h3>
           <ul>
             <li>Establish a clear visual system that could be expanded and applied to a series of books.</li>
@@ -190,7 +188,7 @@
           <div class="pb-4">
             <a href="questica.html"><img class="img-fluid project" src="img/questica-1.png"></a>
           </div>
-          <p class="project-sub">Campaign. Design. Postcards.</p>
+          <p class="project-sub">Campaign Creative. Design. Illustration.</p>
           <h5 class="project-title">Questica Budget</h5>
         </div>
         <div class="col-sm-6 col-md-6 col-lg-6 pb-2">
