--- a/questica.html
+++ b/questica.html
@@ -109,8 +109,7 @@
         <h2 style="font-size: 20px; font-weight: 600">Questica, a Euna Solutions Brand (Budgeting Software)</h2>
       </div>
       <div>
-        <p>The goal of this ABM campaign was to promote a new product feature called <span>Budget Book Studio</span> in Euna Solutions' Budget product line. This focused approach targeted prospects, in this case we filtered by State/Province, to attain new
-          leads. We utilized MailJoy for the direct mail marketing portion and designed 9 state/province specific postcards.</p>
+        <p>Questica is one of the multiple product lines I provided Graphic Design support for under Euna Solutions. This ABM campaign was a fun project highlight. The campaign promoted a new product feature called <em>Budget Book Studio</em>. A focused approach targeted prospects, in this case we filtered by State/Province, to attain new leads. We utilized MailJoy for the direct mail marketing portion and designed 9 state/province specific postcards.</p>
         <p style="font-weight: 600;">Design Parameters</p>
         <ul>
           <li class="pb-2"><span style="font-weight: 600;">Eye-catching.</span> Visually engage with the viewer, they'll want to hang this in their office.</li>
@@ -123,7 +122,7 @@
   </section>
 
   <div class="container">
-    <div class="row pt-4">
+    <div class="row pt-3">
       <div class="col-sm-6 pb-3">
         <img class="img-fluid" src="img/euna/questica-2.png">
       </div>
@@ -200,14 +199,14 @@
           <div class="pb-4">
             <a href="bonfire.html"><img class="img-fluid project" src="img/bonfire-1.png"></a>
           </div>
-          <p class="project-sub">Campaign. Design. Marketing.</p>
+          <p class="project-sub">Campaign Creative. Design. Data Visuals.</p>
           <h5 class="project-title">Bonfire Interactive</h5>
         </div>
         <div class="col-sm-6 col-md-6 col-lg-6 pb-2">
           <div class="pb-4">
             <a href="nng.html"><img class="img-fluid project" src="img/nng-1.png"></a>
           </div>
-          <p class="project-sub">Book Cover. Visual System. Design.</p>
+          <p class="project-sub">Visual System. Design Thinking.</p>
           <h5 class="project-title">Nielsen Norman Group</h5>
         </div>
       </div>
