--- a/euna.html
+++ b/euna.html
@@ -253,14 +253,14 @@
           <div class="pb-4">
             <a href="bonfire.html"><img class="img-fluid project" src="img/bonfire-1.png"></a>
           </div>
-          <p class="project-sub">Campaign. Design. Marketing.</p>
+          <p class="project-sub">Campaign Creative. Design. Data Visuals.</p>
           <h5 class="project-title">Bonfire Interactive</h5>
         </div>
         <div class="col-sm-6 col-md-6 col-lg-6 pb-2">
           <div class="pb-4">
             <a href="questica.html"><img class="img-fluid project" src="img/questica-1.png"></a>
           </div>
-          <p class="project-sub">Campaign. Design. Postcards.</p>
+          <p class="project-sub">Campaign Creative. Design. Illustration.</p>
           <h5 class="project-title">Questica Budget</h5>
         </div>
       </div>
