--- a/various.html
+++ b/various.html
@@ -78,6 +78,7 @@
     </div>
   </nav>
 
+
   <div class="text-center pt-5 mt-5">
     <h1 style="font-size: 96px; font-weight: 600" class="pt-3">Various Works</h2>
   </div>
@@ -90,22 +91,75 @@
             </div>
 
     <div class="col-lg-8 mx-auto pt-4">
-      <video class="vimeo-lg" style="width: 640px; height: 360px" controls loop autoplay>
+      <video class="vimeo-lg" style="width: 640px; height: 360px"loop autoplay>
             <source src="img/planets.mov" type="video/mp4">
           </video>
-      <video class="vimeo-md" style="width: 540px; height: 260px" controls loop autoplay>
+      <video class="vimeo-md" style="width: 540px; height: 260px"loop autoplay>
             <source src="img/planets.mov" type="video/mp4">
           </video>
-      <video class="vimeo-sm" style="width: 275px; height: 160px" controls loop autoplay>
+      <video class="vimeo-sm" style="width: 275px; height: 160px"loop autoplay>
             <source src="img/planets.mov" type="video/mp4">
       </video>
+    </div>
 
-      <p class="text-center">CSS animations | Source code <a class="link" href="https://codepen.io/hath0013/pen/VPPagm">here</a>.</p>
+      <p class="text-center">CSS animations | Source code <a class="link" href="https://codepen.io/hath0013/pen/VPPagm" target="blank">here</a>.</p>
 
     </section>
 
     <div class="bb pt-2 pb-3"></div>
 
+    <div class="text-center pt-5">
+      <h2 style="font-size: 28px; font-weight: 600" class="pt-3">School Days</h2>
+    </div>
+
+    <section class="mx-auto">
+
+      <div class="col-lg-8 mx-auto pt-4">
+        <video muted class="vimeo-lg" style="width: 640px; height: 360px"loop autoplay>
+              <source src="img/figure-ground.mov" type="video/mp4">
+            </video>
+        <video muted class="vimeo-md" style="width: 540px; height: 260px"loop autoplay>
+              <source src="img/figure-ground.mov" type="video/mp4">
+            </video>
+        <video muted class="vimeo-sm" style="width: 275px; height: 160px"loop autoplay>
+              <source src="img/figure-ground.mov" type="video/mp4">
+            </video>
+          </div>
+
+          <div class="col-lg-8 mx-auto pt-4">
+            <video muted class="vimeo-lg" style="width: 640px; height: 360px"loop autoplay>
+                  <source src="img/icons.mov" type="video/mp4">
+                </video>
+            <video muted class="vimeo-md" style="width: 540px; height: 260px"loop autoplay>
+                  <source src="img/icons.mov" type="video/mp4">
+                </video>
+            <video muted class="vimeo-sm" style="width: 275px; height: 160px"loop autoplay>
+                  <source src="img/icons.mov" type="video/mp4">
+                </video>
+              </div>
+
+              <div class="col-lg-8 mx-auto pt-4">
+                <video muted class="vimeo-lg" style="width: 640px; height: 360px"loop autoplay>
+                      <source src="img/cmn-ad.mov" type="video/mp4">
+                    </video>
+                <video muted class="vimeo-md" style="width: 540px; height: 260px"loop autoplay>
+                      <source src="img/cmn-ad.mov" type="video/mp4">
+                    </video>
+                <video muted class="vimeo-sm" style="width: 275px; height: 160px"loop autoplay>
+                      <source src="img/cmn-ad.mov" type="video/mp4">
+                    </video>
+                  </div>
+
+
+      </section>
+
+      <div class="text-center pt-5">
+        <h2 style="font-size: 28px; font-weight: 600" class="pt-3">Bluebeard Poster Creative</h2>
+      </div>
+    </div>
+    <div class="col-sm-4 mx-auto pt-4 pr-3 pl-3">
+      <img class="img-fluid" src="img/projects/perrault.jpg" alt="">
+    </div>
 
     <!-- Banner -->
     <!--<section class="banner-harper text-center"></section>-->
@@ -137,10 +191,9 @@
       </section>
 
       <!--<section class="banner-marvel bg-primary text-center pt-5"></section>-->
-      <div class="bb pt-2 pb-3"></div>
 
 
-      <div class="text-center pt-5">
+      <div class="text-center">
         <h2 style="font-size: 28px; font-weight: 600" class="pt-3">Marvel & DC Characters</h2>
       </div>
 
@@ -158,7 +211,6 @@
         </section>
 
 
-
     <!--<section class="mx-auto banner-qe-hide">
         <div class="row text-center">
           <div class="text-center mx-auto">
@@ -171,7 +223,7 @@
 
 
 
-    <!--<section class="banner-octo text-center"></section>-->
+    <!--<section class="banner-octo text-center"></section>
     <div class="bb pt-2 pb-3"></div>
 
     <div class="text-center pt-5">
@@ -181,18 +233,16 @@
     <section class="mx-auto">
 
       <div class="col-lg-8 mx-auto pt-4">
-        <video muted class="vimeo-lg" style="width: 640px; height: 360px" controls loop autoplay>
+        <video muted class="vimeo-lg" style="width: 640px; height: 360px"loop autoplay>
               <source src="img/octo.mp4" type="video/mp4">
             </video>
-        <video muted class="vimeo-md" style="width: 540px; height: 260px" controls loop autoplay>
+        <video muted class="vimeo-md" style="width: 540px; height: 260px"loop autoplay>
               <source src="img/octo.mp4" type="video/mp4">
             </video>
-        <video muted class="vimeo-sm" style="width: 275px; height: 160px" controls loop autoplay>
+        <video muted class="vimeo-sm" style="width: 275px; height: 160px"loop autoplay>
               <source src="img/octo.mp4" type="video/mp4">
             </video>
       </section>
-
-    <div class="bb pt-5"></div>
 
       <section class="pb-3 pt-4">
         <div class="container">
@@ -213,7 +263,7 @@
             </div>
           </div>
         </div>
-      </section>
+      </section>-->
 
       <section style="background-color: #f8f9fa;" class="pt-5">
         <footer id="connect" class="center text-center pb-3" id="footer">
@@ -238,4 +288,23 @@
         </footer>
       </section>
 
-</html>
+
+
+        <!-- Bootstrap core JavaScript -->
+        <script src="vendor/jquery/jquery.min.js"></script>
+        <script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
+
+        <!-- Plugin JavaScript -->
+        <script src="vendor/jquery-easing/jquery.easing.min.js"></script>
+        <script src="vendor/magnific-popup/jquery.magnific-popup.min.js"></script>
+
+        <!-- Contact Form JavaScript -->
+        <script src="js/jqBootstrapValidation.js"></script>
+        <script src="js/contact_me.js"></script>
+
+        <!-- Custom scripts for this template -->
+        <script src="js/freelancer.min.js"></script>
+
+      </body>
+
+      </html>
