--- a/about.html
+++ b/about.html
@@ -128,7 +128,7 @@
         <div class="container pt-0">
           <div class="row pt-5">
             <div class="col-sm-6">
-              <h1 class="text-left font-weight-light" style="font-size: 60px;"><span style="font-weight: 300;">I</span>  <span class="intro-1" style="font-weight:800;">design</span>, <span class="intro-2" style="font-weight:800;">illustrate</span><br> & <span class="intro-3" style="font-weight:800;">code</span>.</h1>
+              <h1 class="text-left font-weight-light" style="font-size: 60px; line-height: 64px;"><span style="font-weight: 300;">I</span>  <span class="intro-1" style="font-weight:800;">design</span>, <span class="intro-2" style="font-weight:800;">illustrate</span><br> & <span class="intro-3" style="font-weight:800;">code</span>.</h1>
             </div>
             <div class="col-sm-6 pb-3">
               <p><span style="font-weight: 500;">I’m <span class="intro-0">Hannah Hatherell</span>, an experienced designer based in Ottawa, Ontario.</span><br><br> I play a key role in crafting seamless user experiences and beautifully branded, story-telling designs from concept to execution. I work to solve complex problems with creative, user friendly solutions.<br><br>Most recently, as Graphic Designer and Developer at Euna Solutions, I applied UX principles to craft top-tier marketing
@@ -197,22 +197,21 @@
 
 
   <!-- Process -->
-
   <div class="container pb-5 pt-5">
     <div class="center pt-0">
       <div class="row pt-5">
         <div class="col-sm-5">
-          <h2 style="font-size: 60px; font-weight: 600; line-height: 70px;">My Design Process</h2>
+          <h2 style="font-size: 60px; font-weight: 600; line-height: 60px;">My Design Process</h2>
           <!--<h1 class="text-left font-weight-light pb-2"><span style="font-weight: 300;">My</span> <span class="intro-2" style="font-weight:800;">design</span> <span class="intro-3" style="font-weight:800;">process</span>.</h1>-->
         </div>
-        <div class="col-sm-7 pb-3  pl-5">
+        <div class="col-sm-7 pb-3">
           <ul class="scope-list">
             <li>Sync</li>
             <li>Research and Ideate</li>
             <li>Design</li>
             <li>Share and Revise</li>
             <li>Implement and Deliver</li>
-            <li>Collect Data</li>
+            <li>Monitor Performance</li>
           </ul>
           <!--<ol>
               <li style="font-weight: 600; font-size: 20px;">Sync</li>
