--- a/bonfire.html
+++ b/bonfire.html
@@ -153,7 +153,7 @@
       <video muted class="vimeo-md" style="width: 540px; height: 260px"loop autoplay>
                 <source src="img/euna/sops-lp.mp4" type="video/mp4">
               </video>
-      <video muted class="vimeo-sm" style="width: 275px; height: 160px"loop autoplay>
+      <video muted class="vimeo-sm" style="width: 275px; height: 160px"loop autoplay controls>
                 <source src="img/euna/sops-lp.mp4" type="video/mp4">
               </video>
 
