--- a/various.html
+++ b/various.html
@@ -97,7 +97,7 @@
       <video class="vimeo-md" style="width: 540px; height: 260px"loop autoplay>
             <source src="img/planets.mov" type="video/mp4">
           </video>
-      <video class="vimeo-sm" style="width: 275px; height: 160px"loop autoplay>
+      <video class="vimeo-sm" style="width: 275px; height: 160px"loop autoplay controls>
             <source src="img/planets.mov" type="video/mp4">
       </video>
     </div>
@@ -121,7 +121,7 @@
         <video muted class="vimeo-md" style="width: 540px; height: 260px"loop autoplay>
               <source src="img/figure-ground.mov" type="video/mp4">
             </video>
-        <video muted class="vimeo-sm" style="width: 275px; height: 160px"loop autoplay>
+        <video muted class="vimeo-sm" style="width: 275px; height: 160px"loop autoplay controls>
               <source src="img/figure-ground.mov" type="video/mp4">
             </video>
           </div>
@@ -133,7 +133,7 @@
             <video muted class="vimeo-md" style="width: 540px; height: 260px"loop autoplay>
                   <source src="img/icons.mov" type="video/mp4">
                 </video>
-            <video muted class="vimeo-sm" style="width: 275px; height: 160px"loop autoplay>
+            <video muted class="vimeo-sm" style="width: 275px; height: 160px"loop autoplay controls>
                   <source src="img/icons.mov" type="video/mp4">
                 </video>
               </div>
@@ -145,7 +145,7 @@
                 <video muted class="vimeo-md" style="width: 540px; height: 260px"loop autoplay>
                       <source src="img/cmn-ad.mov" type="video/mp4">
                     </video>
-                <video muted class="vimeo-sm" style="width: 275px; height: 160px"loop autoplay>
+                <video muted class="vimeo-sm" style="width: 275px; height: 160px"loop autoplay controls>
                       <source src="img/cmn-ad.mov" type="video/mp4">
                     </video>
                   </div>
@@ -153,13 +153,7 @@
 
       </section>
 
-      <div class="text-center pt-5">
-        <h2 style="font-size: 28px; font-weight: 600" class="pt-3">Bluebeard Poster Creative</h2>
-      </div>
-    </div>
-    <div class="col-sm-4 mx-auto pt-4 pr-3 pl-3">
-      <img class="img-fluid" src="img/projects/perrault.jpg" alt="">
-    </div>
+
 
     <!-- Banner -->
     <!--<section class="banner-harper text-center"></section>-->
@@ -186,7 +180,6 @@
               <img class="img-fluid" src="img/projects/harper/harper.jpg" class="img-fluid d-block" alt="">
             </div>
 
-
         </div>
       </section>
 
@@ -210,6 +203,13 @@
           </div>
         </section>
 
+<!--        <div class="text-center">
+          <h2 style="font-size: 28px; font-weight: 600" class="pt-3">Poster Creative</h2>
+        </div>
+      </div>
+      <div class="col-sm-4 mx-auto pt-4 pr-3 pl-3">
+        <img class="img-fluid" src="img/projects/perrault.jpg" alt="">
+      </div>-->
 
     <!--<section class="mx-auto banner-qe-hide">
         <div class="row text-center">
