--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
   <section class="pt-5 mt-5 pb-4">
     <div class="container center">
       <div>
-        <h1 class="pl-5 pr-5 pt-4 text-center" style="line-height: 32px; font-size: 26px; font-weight: 500;">Hi, I'm Hannah 👋 I’m an experienced designer with a marketing background, who enjoys solving complex problems with design solutions.</h1>
+        <h1 class="pl-5 pr-5 pt-4 text-center" style="line-height: 32px; font-size: 26px; font-weight: 500;">Hi, I'm Hannah 👋 an experienced designer with a marketing background, who enjoys solving complex problems with design solutions.</h1>
         <!--<h1 class="pl-5 pr-5 text-center pt-4" style="line-height: 26px; font-size: 27px; font-weight: 300;">Hi, I'm Hannah 👋</h1>
         <h1 class="text-center pl-4 pr-4" style="line-height: 26px; font-size: 24px; font-weight: 200;">I’m an experienced designer with a marketing background, who enjoys solving complex problems with design solutions.</h1>-->
         <!--<div class="text-center ixdf-mobile">
