euna copy tweak

--- a/euna.html
+++ b/euna.html
@@ -94,10 +94,10 @@
         <h2 style="font-size: 20px; font-weight: 600">Euna Solutions (formerly GTY)</h2>
       </div>
       <div>
-        <p>At Euna (SaaS), I collaborated closely with a dynamic team of three designers and the Digital and Product teams, making significant contributions to the Marketing and Sales departments. My core design responsibilities involved creation of brand and marketing collateral, campaign creative such as compelling landing pages, presentations, eBooks, whitepapers, ads, emails banners etc. ensuring a consistent and impactful brand presence across all channels.</p>
+        <p>At Euna (SaaS), I collaborated closely with a team of three designers and the Digital, Product, and Content teams in Marketing. I made significant contributions to the Marketing and Sales departments with compelling and effective marketing collateral and campaign creative. Some of which included: landing pages, social graphics, presentations, eBooks, whitepapers, ads, templates, email design and infographic and data visuals.</p>
         <p style="font-weight: 600;">My key contributions:</p>
         <ul>
-          <li class="pb-2"><span style="font-weight: 600;">Delivered high-impact marketing and brand collateral,</span> strengthening brand presence and increasing campaign performance across all channels.</li>
+          <li class="pb-2"><span style="font-weight: 600;">Delivered high-impact marketing and brand collateral,</span> strengthening brand presence driving performance across all channels.</li>
           <li class="pb-2"><span style="font-weight: 600;">Created a design system</span> for campaign landing pages that effectively decreased campaign turnaround time.</li>
           <li class="pb-2"><span style="font-weight: 600;">Facilitated a swift rebrand</span> with exceptional organizational and time management skills.</li>
           <li class="pb-2"><span style="font-weight: 600;">Boosted team efficiency</span> by creating and implementing brand libraries, templates and standardized file systems.</li>
